<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlueDark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logoitc"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logoitcrgb"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/ini_adalah_logo_itc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectanglebody"
            android:layout_below="@+id/img_logoitc">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/avatar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/ini_adalah_avatar"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_avatar"
                android:text="@string/masukkan_data"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/tv_title"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlueDark"/>

                <EditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_nama"
                    android:inputType="text"
                    android:autofillHints=""/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prodi"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorBlueDark"/>

                <EditText
                    android:id="@+id/et_prodi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_prodi"
                    android:inputType="text"
                    android:autofillHints=""/>

                <Button
                    android:id="@+id/bt_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kirim"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rectanglebutton"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>